# developer-onboarding

./: .env-example  .gitignore  .gitmodules  .mcp.json  LICENSE  README.md  compose.yaml  pyproject.toml
.claude/: settings.local.json
keycloak-export/: bluecore-realm.json
nginx/: bluecore.conf  index.html
nginx/assets/: health.js  styles.css
notebooks/: 01_UploadSinopiaProfiles.ipynb  02_Load_CBDs.ipynb  03_WorkAndInstanceVectors.ipynb  04_DeDuplicateAgent.ipynb  blue_core_mcp.py  helpers.py
scripts/: export-keycloak-realm.sh  init-multi-postgres-dbs.sh
