[project]
name = "developer-onboarding"
version = "0.1.0"
description = "Blue Core Developer Onboarding Repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bluecore-models>=0.11.1",
    "httpx>=0.27.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "pydantic-ai>=1.37.0",
    "tqdm>=4.67.3",
]
